; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/pccbb/extr_pccbb.c_cbb_teardown_intr.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/pccbb/extr_pccbb.c_cbb_teardown_intr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.resource = type { i32 }
%struct.cbb_intrhand = type { i32 }

@M_DEVBUF = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @cbb_teardown_intr(i32 %0, i32 %1, %struct.resource* %2, i8* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca %struct.resource*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca %struct.cbb_intrhand*, align 8
  %11 = alloca i32, align 4
  store i32 %0, i32* %6, align 4
  store i32 %1, i32* %7, align 4
  store %struct.resource* %2, %struct.resource** %8, align 8
  store i8* %3, i8** %9, align 8
  %12 = load i8*, i8** %9, align 8
  %13 = bitcast i8* %12 to %struct.cbb_intrhand*
  store %struct.cbb_intrhand* %13, %struct.cbb_intrhand** %10, align 8
  %14 = load i32, i32* %6, align 4
  %15 = call i32 @device_get_parent(i32 %14)
  %16 = load i32, i32* %7, align 4
  %17 = load %struct.resource*, %struct.resource** %8, align 8
  %18 = load %struct.cbb_intrhand*, %struct.cbb_intrhand** %10, align 8
  %19 = getelementptr inbounds %struct.cbb_intrhand, %struct.cbb_intrhand* %18, i32 0, i32 0
  %20 = load i32, i32* %19, align 4
  %21 = call i32 @BUS_TEARDOWN_INTR(i32 %15, i32 %16, %struct.resource* %17, i32 %20)
  store i32 %21, i32* %11, align 4
  %22 = load i32, i32* %11, align 4
  %23 = icmp ne i32 %22, 0
  br i1 %23, label %24, label %26

24:                                               ; preds = %4
  %25 = load i32, i32* %11, align 4
  store i32 %25, i32* %5, align 4
  br label %30

26:                                               ; preds = %4
  %27 = load %struct.cbb_intrhand*, %struct.cbb_intrhand** %10, align 8
  %28 = load i32, i32* @M_DEVBUF, align 4
  %29 = call i32 @free(%struct.cbb_intrhand* %27, i32 %28)
  store i32 0, i32* %5, align 4
  br label %30

30:                                               ; preds = %26, %24
  %31 = load i32, i32* %5, align 4
  ret i32 %31
}

declare dso_local i32 @BUS_TEARDOWN_INTR(i32, i32, %struct.resource*, i32) #1

declare dso_local i32 @device_get_parent(i32) #1

declare dso_local i32 @free(%struct.cbb_intrhand*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
